Update project folder structure and build process to separate theme and content

--- a/src/styles/blocks/map.css
+++ b/src/styles/blocks/map.css
@@ -10,7 +10,7 @@
     position: relative;
     height: 630px;
     margin-bottom: 40px;
-    background: url('images/map.png') no-repeat;
+    background: url('../images/map.png') no-repeat;
     background-size: 100%;
   }
 
