--- a/src/styles/blocks/header.css
+++ b/src/styles/blocks/header.css
@@ -5,7 +5,7 @@
   width: 100%;
   height: 520px;
   padding: 54px 0;
-  background-image: url('images/header-bg.jpg');
+  background-image: url('../images/header-bg.jpg');
   background-repeat: no-repeat;
   background-size: cover;
 
