--- a/src/styles/icons.css
+++ b/src/styles/icons.css
@@ -7,27 +7,27 @@
   background-position: center center;
 
   &_name_arrow-right {
-    background-image: url('images/icons/arrow-right.svg');
+    background-image: url('../images/icons/arrow-right.svg');
     width: 36px;
   }
 
   &_name_clinic {
-    background-image: url('images/icons/clinic.png');
+    background-image: url('../images/icons/clinic.png');
     background-size: 100%;
   }
 
   &_name_doctors {
-    background-image: url('images/icons/doctors.png');
+    background-image: url('../images/icons/doctors.png');
     background-size: 100%;
   }
 
   &_name_persons {
-    background-image: url('images/icons/persons.png');
+    background-image: url('../images/icons/persons.png');
     background-size: 100%;
   }
 
   &_name_doc {
-    background-image: url('images/icons/doc.png');
+    background-image: url('../images/icons/doc.png');
     background-size: 100%;
   }
 }
