--- a/src/styles/blocks/search.css
+++ b/src/styles/blocks/search.css
@@ -13,10 +13,6 @@
 
   &__map {
     flex: 1 1 auto;
-
-    img {
-      max-width: 100%;
-    }
   }
 
   &__input {
@@ -63,6 +59,47 @@
   &__result-item_active {
     .search__result-item-title {
       color: #4880ed;
+    }
+  }
+
+  .gm-style-iw {
+    width: 250px !important;
+    overflow: visible !important;
+    pointer-events: none;
+    z-index: -1;
+  }
+
+  &__map-tooltip {
+    width: 250px;
+    height: 330px;
+    padding: 32px;
+    background-color: #fff;
+    border: #dad9d8 1px solid;
+    line-height: 20px !important;
+    font: 14px 'GothamPro';
+
+    &::before {
+      content: "";
+      display: block;
+      position: absolute;
+      left: -1px;
+      top: -10px;
+      bottom: 3px;
+      width: 2px;
+      background-color: #4880ed;
+      z-index: 2;
+    }
+  }
+
+  &__map-tooltip-count {
+    margin-top: 26px;
+    font-size: 30px;
+    line-height: 30px;
+
+    small {
+      display: block;
+      font-size: 14px;
+      line-height: 14px;
     }
   }
 }
