--- a/src/styles/blocks/article.css
+++ b/src/styles/blocks/article.css
@@ -45,6 +45,12 @@
         }
       }
     }
+
+    h3 {
+      text-align: left;
+      text-transform: none;
+      line-height: 30px;
+    }
   }
 
   &__footer {
