--- a/src/styles/blocks/article.css
+++ b/src/styles/blocks/article.css
@@ -46,10 +46,44 @@
       }
     }
 
-    h3 {
+    ol {
+      list-style: none;
+      counter-reset: list;
+      margin-bottom: 20px;
+
+      li::before {
+        counter-increment: list 1;
+        content: counter(list) ".";
+        display: inline-block;
+        width: 24px;
+      }
+    }
+
+    pre {
+      margin: 20px 0;
+      padding: 20px;
+      background-color: #f5f5f5;
+      border-radius: 4px;
+      overflow: auto;
+    }
+
+    h2, h3, h4 {
+      font-weight: 700;
       text-align: left;
       text-transform: none;
       line-height: 30px;
+      font-size: 18px;
+      margin: 0 0 20px 0;
+    }
+
+    h3 {
+      font-size: 16px;
+      line-height: 20px;
+    }
+
+    h4 {
+      font-size: 14px;
+      line-height: 18px;
     }
   }
 
