--- a/src/styles/blocks/explain.css
+++ b/src/styles/blocks/explain.css
@@ -22,6 +22,51 @@
     }
   }
 
+  &__tags {
+    display: flex;
+    flex-flow: row nowrap;
+    margin-top: 48px;
+  }
+
+  &__tags-title {
+    font-weight: 700;
+    font-size: 16px;
+    margin-right: 20px;
+  }
+
+  &__tags-list {
+    flex: 1 1 auto;
+    list-style: none;
+    font-size: 0;
+    line-height: 0;
+  }
+
+  &__tags-item {
+    display: inline-block;
+
+    &::after {
+      content: ",";
+      display: inline-block;
+      font-size: 16px;
+      margin-right: 5px;
+      opacity: 0.5;
+    }
+
+    &:last-child::after {
+      display: none;
+    }
+  }
+
+  &__tags-link {
+    font-size: 16px;
+    line-height: 22px;
+    opacity: 0.5;
+
+    &:hover {
+      opacity: 1;
+    }
+  }
+
   &__footer {
     margin-top: 50px;
     text-align: center;
