--- a/src/styles/icons.css
+++ b/src/styles/icons.css
@@ -30,4 +30,9 @@
     background-image: url('../images/icons/doc.png');
     background-size: 100%;
   }
+
+  &_name_admin {
+    background-image: url('../images/icons/admin.svg');
+    background-size: 100%;
+  }
 }
