--- a/src/styles/tabs.css
+++ b/src/styles/tabs.css
@@ -1,5 +1,4 @@
 .tabs {
-
   &__header {
     position: relative;
     margin: 0 60px;
@@ -21,7 +20,7 @@
     padding-bottom: 38px;
     cursor: pointer;
     white-space: nowrap;
-    overflow: hidden;
+    //overflow: hidden;
 
     &_active {
       font-weight: 700;
@@ -64,5 +63,21 @@
     height: 5px;
     background-color: #4880ed;
     z-index: 1;
+  }
+
+  &_theme_large {
+    .tabs__nav {
+      font-size: 20px;
+      font-weight: 700;
+      line-height: 26px;
+      text-align: center;
+      text-transform: uppercase;
+    }
+
+    .tabs__nav-item {
+      display: flex;
+      align-items: center;
+      align-self: stretch;
+    }
   }
 }
