integrate stat and map with real data

--- a/src/styles/blocks/join.css
+++ b/src/styles/blocks/join.css
@@ -53,6 +53,10 @@
       background-color: #f7df4a;
     }
 
+    &_color_pink {
+       background-color: #dd8de6;
+    }
+
     i {
       width: 35px;
       height: 35px;
