--- a/src/styles/icons.css
+++ b/src/styles/icons.css
@@ -26,6 +26,12 @@
     background-size: 100%;
   }
 
+  &_name_employees {
+     background-image: url('../images/icons/employees.png');
+     background-size: 100%;
+     height: 100% !important;
+   }
+
   &_name_doc {
     background-image: url('../images/icons/doc.png');
     background-size: 100%;
