--- a/src/styles/blocks/search.css
+++ b/src/styles/blocks/search.css
@@ -19,7 +19,8 @@
   align-content: stretch;
 
   &__aside {
-    flex: 0 0 480px;
+    flex: 0 0 auto;
+    width: 480px;
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
@@ -28,6 +29,15 @@
   &__map {
     flex: 1 1 auto;
     transform: translate3d(0, 0, 0);
+    position: relative;
+
+    &__el {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+    }
   }
 
   &__input {
