--- a/src/styles/tabs.css
+++ b/src/styles/tabs.css
@@ -3,6 +3,13 @@
     position: relative;
     margin: 0 60px;
     border-bottom: #dad9d8 1px solid;
+
+    &-title {
+       font-style: 16px;
+       font-weight: 700;
+       text-align: center;
+       margin-bottom: 45px;
+     }
   }
 
   &__nav {
