--- a/src/styles/tabs.css
+++ b/src/styles/tabs.css
@@ -3,6 +3,17 @@
     position: relative;
     margin: 0 60px;
     border-bottom: #dad9d8 1px solid;
+
+    &-small {
+       margin: 0 260px;
+    }
+
+    &-title {
+       font-style: 16px;
+       font-weight: 700;
+       text-align: center;
+       margin-bottom: 45px;
+     }
   }
 
   &__nav {
@@ -22,6 +33,10 @@
     white-space: nowrap;
     //overflow: hidden;
 
+    &_small {
+       padding-bottom: 15px;
+    }
+
     &_active {
       font-weight: 700;
       //box-shadow: 0 5px 0 0 #4880ed;
@@ -40,6 +55,10 @@
     position: relative;
     margin-top: 60px;
     //overflow-x: hidden;
+
+    &-small {
+       margin-top: 40px;
+     }
   }
 
   &__slide {
