--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -6,13 +6,13 @@
 }
 
 body {
-  min-width: 100vw;
+  width: 100vw;
+  min-width: 1200px;
   min-height: 100vh;
   font: 16px 'GothamPro';
   line-height: 22px;
   background-color: #fff;
   color: #292b37;
-  overflow-x: hidden;
 }
 
 a {
