--- a/src/styles/blocks/article.css
+++ b/src/styles/blocks/article.css
@@ -14,6 +14,10 @@
     }
   }
 
+  &__image {
+    margin-bottom: 32px;
+  }
+
   &__main {
     max-width: 600px;
     line-height: 22px;
@@ -37,10 +41,11 @@
       margin: 16px 0 16px 0;
 
       li {
-        margin-bottom: 20px;
+        margin-bottom: 5px;
 
         &::before {
-          content: "•";
+          content: "–";
+          margin-right: 10px;
           display: inline-block;
         }
       }
