--- a/src/styles/blocks/providers-page.css
+++ b/src/styles/blocks/providers-page.css
@@ -24,6 +24,17 @@
     a {
       color: #4880ed;
     }
+
+    i {
+      margin-top: -4px;
+      margin-right: 15px;
+    }
+
+    span {
+      display: inline-block;
+      vertical-align: middle;
+      line-height: 1;
+    }
   }
 }
 
@@ -55,6 +66,7 @@
     padding: 28px 50px;
     background-color: rgba(255, 255, 255, .9);
     opacity: 0;
+    display: none;
     font-size: 16px;
     position: absolute;
     margin-top: 16px;
@@ -89,13 +101,24 @@
   &__requirements {
     color: #548ef0;
     font-size: 16px;
+    font-weight: bold;
 
     &_active {
       font-weight: bold;
+    }
+
+    .icon {
+      margin-left: 8px;
+      transform: rotate(0deg);
     }
   }
 
   &__requirements_active + &__item-tooltip {
     opacity: 1;
+    display: block;
+  }
+
+  &__requirements_active .icon {
+    transform: rotate(180deg);
   }
 }
