--- a/src/styles/main-map.css
+++ b/src/styles/main-map.css
@@ -15,15 +15,22 @@
 .header {
   flex: 0 0 auto;
   min-height: 40px;
-  padding: 24px 0;
+  padding: 54px 0;
+  height: 110px;
   text-align: center;
+  display: flex;
 
   &__logo {
     display: inline-block;
     margin-right: 90px;
+    flex: 1 1 auto;
+    max-width: 480px;
+    text-align: left;
+    margin-top: -16px;
+    padding-left: 65px;
 
     img {
-      height: 40px;
+      height: 48px;
     }
   }
 }
