--- a/src/styles/blocks/search.css
+++ b/src/styles/blocks/search.css
@@ -92,6 +92,7 @@
     padding: 0 60px;
     flex: 1 1 auto;
     overflow: auto;
+    max-height: 500px;
     transform: translate3d(0, 0, 0);
 
     &::before,
