Plular forms, icons, content fixes

--- a/src/styles/icons.css
+++ b/src/styles/icons.css
@@ -53,4 +53,14 @@
     background-image: url('../images/icons/admin.svg');
     background-size: 100%;
   }
+  &_name_fb {
+     background-image: url('../images/icons/fb.svg');
+     background-size: contain;
+     margin-left: 10px;
+  }
+
+  &_name_tw {
+   background-image: url('../images/icons/twitter.svg');
+   background-size: contain;
+ }
 }
