--- a/src/styles/blocks/nav.css
+++ b/src/styles/blocks/nav.css
@@ -9,7 +9,11 @@
     font-size: 12px;
     font-weight: 700;
     text-transform: uppercase;
-     letter-spacing: 0.1em;
+    letter-spacing: 0.1em;
+    cursor: pointer;
+  }
+  ul li:last-child a {
+    margin-right: 0;
   }
 
   &__link_active {
