--- a/src/styles/blocks/providers-page.css
+++ b/src/styles/blocks/providers-page.css
@@ -1,5 +1,7 @@
 
 .providers-page {
+  width: 1100px;
+  margin: 0 auto;
 
   &__title {
     text-align: center;
@@ -120,5 +122,44 @@
 
   &__requirements_active .icon {
     transform: rotate(180deg);
+  }
+}
+
+
+.partners {
+  display: flex;
+  flex-wrap: wrap;
+
+  &__item {
+     width: calc(33.33% - 20px);
+     padding: 0 20px;
+     border: 1px solid #efefef;
+     margin: 0 10px;
+     margin-bottom: 20px;
+
+     img {
+       text-align: center;
+       display: block;
+       margin: 0 auto;
+       width: 200px;
+     }
+
+     &-title {
+        font-size: 24px;
+        font-weight: 500;
+        margin-bottom: 10px;
+        line-height: 1.2em;
+     }
+
+     &-video {
+         margin-bottom: 20px;
+     }
+
+     p {
+       font-size: 14px;
+       line-height: 20px;
+       text-align: justify;
+       margin-bottom: 20px;
+     }
   }
 }
