--- a/src/styles/blocks/providers-page.css
+++ b/src/styles/blocks/providers-page.css
@@ -133,7 +133,7 @@
   &__item {
      width: calc(33.33% - 20px);
      padding: 0 20px;
-     border: 1px solid #efefef;
+     /*border: 1px solid #efefef;*/
      margin: 0 10px;
      margin-bottom: 20px;
 
@@ -145,8 +145,8 @@
      }
 
      &-title {
-        font-size: 24px;
-        font-weight: 500;
+        font-size: 16px;
+        font-weight: 700;
         margin-bottom: 10px;
         line-height: 1.2em;
      }
@@ -158,7 +158,7 @@
      p {
        font-size: 14px;
        line-height: 20px;
-       text-align: justify;
+       text-align: left;
        margin-bottom: 20px;
      }
   }
