--- a/src/styles/slider.css
+++ b/src/styles/slider.css
@@ -15,10 +15,12 @@
   }
 
   &__markers {
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: center;
-    margin-top: 30px;
+    /*display: flex;*/
+    /*flex-flow: row nowrap;*/
+    /*justify-content: center;*/
+    display: block;
+    text-align: center;
+    margin-top: 50px;
     font-size: 0;
     list-style: none;
   }
