--- a/src/styles/blocks/docs.css
+++ b/src/styles/blocks/docs.css
@@ -22,6 +22,15 @@
     border: 1px solid rgba(72, 128, 237, 0.15);
     background-color: rgba(86, 145, 241, 0);
     font-weight: 700;
+    
+    @media screen and (max-width: 620px) {
+      flex: 0 0 100%;
+    }
+
+    @media screen and (max-width: 768px) {
+      flex: 1 0 32%;
+    }
+    
 
     a {
       display: flex;
@@ -43,7 +52,7 @@
   }
 
   &__slider-content {
-    height: 570px;
-    overflow: hidden;
+    /*height: 570px;*/
+    /*overflow: hidden;*/
   }
 }
