--- a/src/styles/main-doc.css
+++ b/src/styles/main-doc.css
@@ -17,6 +17,10 @@
   max-width: var(--max-content-width);
   min-width: var(--min-content-width);
   margin: 0 auto;
+
+  @media screen and (max-width: 768px) {
+    padding: 0 20px;
+  }
 }
 
 .main {
