--- a/src/styles/main-map.css
+++ b/src/styles/main-map.css
@@ -7,7 +7,6 @@
 @import "blocks/search.css";
 
 .map-page {
-  height: 100vh;
   display: flex;
   flex-flow: column nowrap;
 }
@@ -19,6 +18,11 @@
   text-align: center;
   display: flex;
 
+  @media screen and (max-width: 768px) {
+    padding: 20px;  
+  }
+  
+
   &__logo {
     display: inline-block;
     margin-right: 90px;
@@ -27,6 +31,13 @@
     text-align: left;
     margin-top: -16px;
     padding-left: 65px;
+
+    @media screen and (max-width: 768px) {
+      padding-left: 0;
+      margin-top: 0;
+      text-align: center;
+      margin-right: 0;
+    }
 
     img {
       height: 40px;
