--- a/src/styles/blocks/join.css
+++ b/src/styles/blocks/join.css
@@ -28,7 +28,7 @@
 
     @media screen and (min-width: 767px) {
       font-size: 22px;
-      flex: 1 1 auto;
+      flex: 1 1 25%;
     }   
   }
 
