--- a/src/styles/main-doc.css
+++ b/src/styles/main-doc.css
@@ -17,6 +17,7 @@
   max-width: var(--max-content-width);
   min-width: var(--min-content-width);
   margin: 0 auto;
+  padding: 0 10px;
 
   @media screen and (max-width: 768px) {
     padding: 0 20px;
@@ -30,6 +31,7 @@
 .main__in {
   max-width: 960px;
   margin: 0 auto;
+  padding: 0 10px;
 
   @media screen and (max-width: 768px) {
       padding: 0 20px;
