--- a/src/styles/blocks/explain.css
+++ b/src/styles/blocks/explain.css
@@ -2,23 +2,26 @@
   padding-bottom: 60px;
   border-bottom: #dad9d8 1px solid;
 
-  &__tabs-content {
-    height: 220px;
-  }
-
   &__list {
     display: flex;
-    flex-flow: row nowrap;
+    flex-flow: row wrap;
     justify-content: space-between;
     list-style: none;
   }
 
   &__item {
-    margin-right: 20px;
-    flex: 0 0 200px;
+    margin-bottom: 20px;
 
     &:last-of-type {
       margin-right: 0;
+    }
+
+    @media screen and (min-width: 768px) {
+      flex-basis: 354px;
+    }
+
+    @media screen and (min-width: 1024px) {
+      flex-basis: 225px;
     }
   }
 
