--- a/src/styles/blocks/clarifications.css
+++ b/src/styles/blocks/clarifications.css
@@ -1,20 +1,39 @@
 .clarifications {
-  margin-top: -50px;
-
-  &__tabs-content {
-    margin-bottom: 100px;
-  }
+  margin-bottom: 80px;
 
   &__list {
     display: flex;
     flex-flow: row wrap;
-    align-items: flex-start;
-    margin-right: -20px;
+    /*justify-content: space-between;*/
+    list-style: none;
   }
 
   &__item {
-    display: inline-block;
-    flex: 0 0 223px;
-    margin: 0 20px 80px 0;
+    margin-bottom: 20px;
+
+    &:last-of-type {
+      margin-right: 0;
+    }
+
+    @media screen and (min-width: 768px) {
+      flex-basis: 354px;
+      margin-right: 20px;
+
+      &:nth-child(2n) {
+        margin-right: 0;
+      }
+    }
+
+    @media screen and (min-width: 1024px) {
+      flex-basis: 225px;
+
+      &:nth-child(2n) {
+        margin-right: 20px;
+      }
+
+      &:nth-child(4n) {
+        margin-right: 0;
+      }
+    }
   }
 }
