--- a/src/styles/main-doc.css
+++ b/src/styles/main-doc.css
@@ -19,23 +19,21 @@
   margin: 0 auto;
   padding: 0 10px;
 
-  @media screen and (max-width: 768px) {
+  @media screen and (min-width: 768px) {
     padding: 0 20px;
   }
 }
 
 .main {
   min-height: calc(100vh - 155px - 100px);
+  padding: 0 20px;
 }
 
 .main__in {
   max-width: 960px;
   margin: 0 auto;
-  padding: 0 10px;
+  /*padding: 0 10px;*/
 
-  @media screen and (max-width: 768px) {
-      padding: 0 20px;
-  } 
 }
 
 .footer {
