--- a/src/styles/blocks/nav.css
+++ b/src/styles/blocks/nav.css
@@ -1,12 +1,32 @@
 .nav {
-  
   vertical-align: top;
   line-height: 40px;
-  display: none;
 
-  @media screen and (min-width: 767px) {
+  @media (max-width: 860px) {
+    position: fixed;
+    z-index: 10;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    padding: 20px 0 0;
+    opacity: 0;
+    background-color: #fff;
+    text-align: center;
+    visibility: hidden;
+    transition: opacity 0.2s ease, visibility 0.2s ease;
+    will-change: opacity;
+
+    &.open {
+       opacity: 0.9;
+       visibility: visible;
+    }
+  }
+
+  @media screen and (min-width: 860px) {
     display: inline-block;
   }
+
 
   &__link {
     display: inline-block;
@@ -30,6 +50,12 @@
 
     li {
       display: inline-block;
+
+      @media screen and (max-width: 860px) {
+        display: block;
+        text-align: center;
+        margin: 0 auto;
+      }
     }
   }
 }
