--- a/src/styles/main-join.css
+++ b/src/styles/main-join.css
@@ -9,16 +9,26 @@
 @import "blocks/nav.css";
 @import "blocks/header-doc.css";
 
+.main {
+  padding: 0 20px;
+}
+
 .join-page {
-  width: var(--max-content-width);
+  max-width: var(--max-content-width);
   margin: 0 auto;
 
   &__title {
-    margin: 70px 0;
-    font-size: 45px;
-    line-height: 50px;
+    margin: 30px 0;
+    font-size: 23px;
+    line-height: 25px;
     font-weight: 300;
     text-align: center;
+
+    @media screen and (min-width: 768px) {
+      margin: 70px 0;
+      font-size: 45px;
+      line-height: 50px;
+    }
   }
 
   &__tabs {
@@ -27,26 +37,42 @@
 }
 
 .join-rules {
-  margin: 0 60px;
+  @media screen and (min-width: 768px) {
+    margin: 0 60px;
+  }
 
   &__attention {
-     padding-bottom: 45px;
+    margin-bottom: 30px;
+
+    @media screen and (min-width: 768px) {
+      margin-bottom: 40px;
+    }
   }
 
   &__title {
-    font-size: 21px;
-    line-height: 20px;
+    font-size: 16px;
+    line-height: 15px;
     font-weight: 300;
     text-align: center;
+
+    @media screen and (min-width: 768px) {
+      font-size: 21px;
+      line-height: 20px;
+    }
   }
 
   &__sub-title {
-    font-size: 22px;
+    font-size: 17px;
     font-weight: 700;
-    margin: 40px 0;
+    margin: 30px 0;
+
+    @media screen and (min-width: 768px) {
+      font-size: 22px;
+      margin: 40px 0;
+    }
 
     &-done {
-       padding-bottom: 30px;
+      padding-bottom: 30px;
     }
   }
 
@@ -59,8 +85,13 @@
   }
 
   &__list-tooltip {
-    margin-bottom: 8px;
-    margin-left: -6px;
+    margin-bottom: 6px;
+    margin-left: -3px;
+
+    @media screen and (min-width: 768px) {
+      margin-bottom: 8px;
+      margin-left: -6px;
+    }
   }
 
   &__list-item {
@@ -71,10 +102,21 @@
     justify-content: center;
     align-items: center;
     text-align: center;
+    font-size: 11px;
     font-weight: 700;
-    line-height: 25px;
+    line-height: 13px;
     color: #4880ed;
-    font-size: 21px;
+    padding: 0 2px;
+
+    @media screen and (min-width: 768px) {
+      font-size: 16px;
+      line-height: 19px;
+    }
+
+    @media screen and (min-width: 1024px) {
+      font-size: 21px;
+      line-height: 25px;
+    }
 
     &::before {
       content: "";
@@ -106,10 +148,17 @@
 
   &__next-list-item {
     position: relative;
-    width: 400px;
-    height: 120px;
-    padding-left: 70px;
+    min-height: 35px;
+    margin-bottom: 20px;
+    padding-left: 35px;
     counter-increment: next-list;
+
+    @media screen and (min-width: 768px) {
+      width: 50%;
+      height: 140px;
+      margin-bottom: 0;
+      padding-left: 70px;
+    }
 
     &::before {
       content: counter(next-list);
@@ -117,28 +166,37 @@
       left: 0;
       top: 0;
       bottom: 0;
-      width: 60px;
+      width: 30px;
       text-align: center;
       color: #4880ed;
-      font-size: 70px;
-      line-height: 70px;
+      font-size: 35px;
+      line-height: 35px;
       font-weight: 300;
+
+      @media screen and (min-width: 768px) {
+        width: 60px;
+        font-size: 70px;
+        line-height: 70px;
+      }
     }
   }
 
-  &__next-list_one {
-    height: 240px;
-  }
+  @media screen and (min-width: 768px) {
+    &__next-list_three {
+      height: 420px;
+    }
 
-  &__next-list_two {
-    height: 485px;
-  }
-
-  &__next-list_three {
-    height: 385px;
+    &__next-list_four {
+      height: 560px;
+    }
   }
 
   &__footer {
     text-align: center;
+    margin-bottom: 30px;
+
+    @media screen and (min-width: 768px) {
+      margin-bottom: 40px;
+    }
   }
 }
